--- a/src/app/core/core.page.html
+++ b/src/app/core/core.page.html
@@ -1,9 +1,12 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>core</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="ongoing">
+      <ion-icon name="receipt-outline"></ion-icon>
+      <ion-label>Ongoing</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="past">
+      <ion-icon name="calendar-outline"></ion-icon>
+      <ion-label>Past</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
