--- a/src/app/core/ongoing/ongoing.page.html
+++ b/src/app/core/ongoing/ongoing.page.html
@@ -4,6 +4,11 @@
       <ion-menu-button memuId="m1"></ion-menu-button>
     </ion-buttons>
     <ion-title>Ongoing Deliveries</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="new">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
