--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -94,6 +94,12 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  // APPLICATION WIDE COLOR STYLES
+  --ion-toolbar-background: var(--ion-color-primary);
+  --ion-toolbar-background-rgb: var(--ion-color-primary-rgb);
+  --ion-toolbar-color: var(--ion-color-primary-contrast);
+  --ion-toolbar-color-rgb: var(--ion-color-primary-contrast-rgb);
 }
 
 @media (prefers-color-scheme: dark) {
