--- a/src/app/core/ongoing/ongoing.page.html
+++ b/src/app/core/ongoing/ongoing.page.html
@@ -12,4 +12,43 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <div class="card placeholder" *ngIf="orders.length <= 0">
+    <div class="header">
+      <div class="subtitle">Oops!!</div>
+      <hr />
+      <div class="title">No Orders Yet</div>
+    </div>
+    <div class="content">
+      You haven't made any new orders so far. If you have ordered and this is
+      showing up, please read the help by clicking the top right corner icon on
+      the "Place A New Order" page.
+    </div>
+    <ion-item>
+      <!-- <ion-icon name="pin" slot="start"></ion-icon> -->
+      <ion-label>Order a delivery now?</ion-label>
+      <ion-button routerLink="new" fill="outline" slot="end">Yes</ion-button>
+    </ion-item>
+  </div>
+
+  <div class="horizontal-cards" *ngIf="orders.length > 0">
+    <div class="card" *ngFor="let order of orders;">
+      <div class="header">
+        <div class="subtitle">From: {{ order.pickupPlace.name }}</div>
+        <hr />
+        <div class="title">{{ order.dropPlace.name }}</div>
+      </div>
+      <div class="content">
+        This is content, without any paragraph or header tags, within an
+        ion-card-content element. {{ order.desc }}
+      </div>
+      <ion-item>
+        <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
+        <ion-label>{{ order.status}} {{luding}}</ion-label>
+        <!-- <ion-button fill="outline" slot="end">Yes</ion-button> -->
+      </ion-item>
+    </div>
+
+    <div class="scroll-end"></div>
+  </div>
+</ion-content>
