--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,8 @@
       <ion-list>
         <ion-menu-toggle menuId="m1">
           <ion-item lines="none">
-            <ion-icon name="analytics-outline" slot="start"></ion-icon>
-            <!-- <ion-label>Manage Deliveries</ion-label> -->
-            <ion-label>Dashboard</ion-label>
+            <ion-icon name="home-outline" slot="start"></ion-icon>
+            <ion-label>Home</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
@@ -26,7 +25,7 @@
         <ion-menu-toggle menuId="m1">
           <ion-item lines="none">
             <ion-icon name="reader-outline" slot="start"></ion-icon>
-            <ion-label>About</ion-label>
+            <ion-label>Abouts</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
