finished the item UI

--- a/src/app/core/core.page.html
+++ b/src/app/core/core.page.html
@@ -46,7 +46,7 @@
   <div class="sub-group">
     <ion-text>Burgers</ion-text>
     <div class="list">
-      <div class="item selected">
+      <div class="item selected" routerLink="item">
         <div class="img-box">
           <div class="i">
             <ion-img src="/assets/B1.jpg"></ion-img>
