--- a/src/app/core/item/item.page.scss
+++ b/src/app/core/item/item.page.scss
@@ -48,6 +48,7 @@ ion-content {
       align-items: center;
 
       .b {
+        position: relative;
         background-color: #77c382;
         width: 34px;
         height: 34px;
@@ -58,7 +59,10 @@ ion-content {
         align-items: center;
         justify-content: center;
         color: #f7f7f7;
-        cursor: pointer;
+
+        &.ion-activatable {
+          cursor: pointer;
+        }
       }
     }
   }
@@ -87,7 +91,9 @@ ion-content {
     .item {
       height: 120px;
       min-width: 100px;
+      width: 100px;
       margin: 0 5px;
+      cursor: pointer;
 
       .logo {
         height: 75px;
@@ -130,22 +136,29 @@ ion-content {
 
     // makes the end of the horizontal scroll nice
     .spice {
-      min-width: 20px;
-      width: 20px;
+      min-width: 10px;
+      width: 10px;
       height: 120px;
     }
   }
 
   .btn {
-    background-color: #77c382;
+    // position: relative;
+    // background-color: #77c382;
     width: 220px;
     height: 45px;
     margin: 15px auto 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     color: #f7f7f7;
     font-size: 18px;
     border-radius: 40px;
+    --border-radius: 40px;
+    --background: #77c382;
+
+    &.exists {
+      --background: #c3b177;
+    }
   }
 }
