--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,14 +79,6 @@
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
 
-  /** medium **/
-  --ion-color-medium: #ddd;
-  --ion-color-medium-rgb: 221, 221, 221;
-  --ion-color-medium-contrast: #333;
-  --ion-color-medium-contrast-rgb: 51, 51, 51;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
-
   // /** medium **/
   // --ion-color-medium: #92949c;
   // --ion-color-medium-rgb: 146, 148, 156;
@@ -94,14 +86,26 @@
   // --ion-color-medium-contrast-rgb: 255, 255, 255;
   // --ion-color-medium-shade: #808289;
   // --ion-color-medium-tint: #9d9fa6;
+  --ion-color-medium: #868080;
+  --ion-color-medium-rgb: 134, 128, 128;
+  --ion-color-medium-contrast: #222428;
+  --ion-color-medium-contrast-rgb: 34, 36, 40;
+  --ion-color-medium-shade: #767171;
+  --ion-color-medium-tint: #928d8d;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  // --ion-color-light: #f4f5f8;
+  // --ion-color-light-rgb: 244, 245, 248;
+  // --ion-color-light-contrast: #000000;
+  // --ion-color-light-contrast-rgb: 0, 0, 0;
+  // --ion-color-light-shade: #d7d8da;
+  // --ion-color-light-tint: #f5f6f9;
+  --ion-color-light: #f7f7f7;
+  --ion-color-light-rgb: 247, 247, 247;
+  --ion-color-light-contrast: #222428;
+  --ion-color-light-contrast-rgb: 34, 36, 40;
+  --ion-color-light-shade: #d9d9d9;
+  --ion-color-light-tint: #f8f8f8;
 
   // APPLICATION WIDE COLOR STYLES
   --ion-toolbar-background: var(--ion-color-primary);
