--- a/src/app/core/item/item.page.scss
+++ b/src/app/core/item/item.page.scss
@@ -17,6 +17,10 @@ ion-content {
       height: 100%;
       object-fit: cover;
     }
+
+    ion-skeleton-text {
+      margin: 0;
+    }
   }
 
   .meta {
@@ -36,9 +40,21 @@ ion-content {
         font-weight: 600;
         font-size: 23px;
       }
+
+      ion-skeleton-text.name {
+        height: 27px;
+        width: 200px;
+        margin: 0;
+      }
       .price {
         font-weight: 600;
         font-size: 21px;
+      }
+
+      ion-skeleton-text.price {
+        height: 24px;
+        width: 60px;
+        margin: 2px 0 0;
       }
     }
     .ctrls {
@@ -64,6 +80,12 @@ ion-content {
           cursor: pointer;
         }
       }
+
+      > ion-skeleton-text {
+        margin: 0 2px;
+        width: 34px;
+        height: 34px;
+      }
     }
   }
 
@@ -77,6 +99,14 @@ ion-content {
     text-overflow: ellipsis;
     margin: 0 auto;
     // text-align: center;
+  }
+
+  ion-skeleton-text.desc {
+    height: 80px;
+    width: 351px;
+    max-width: 540px;
+    --border-radius: 0;
+    margin: 15px auto 0;
   }
 
   .list {
@@ -100,13 +130,25 @@ ion-content {
         width: 85px;
         margin: 0 auto;
         border-radius: 50%;
-        background-color: rgb(87, 84, 84);
+        // background-color: rgb(87, 84, 84);
         overflow: hidden;
+        position: relative;
 
         ion-img {
           object-fit: cover;
           width: 100%;
           height: 100%;
+
+          &.invisible {
+            position: absolute;
+            opacity: 0;
+            pointer-events: none;
+          }
+        }
+
+        ion-skeleton-text {
+          pointer-events: all;
+          margin: 0;
         }
       }
 
@@ -119,6 +161,14 @@ ion-content {
         padding: 7px 0 0;
         font-size: 16px;
         text-overflow: ellipsis;
+      }
+
+      ion-skeleton-text.name {
+        pointer-events: all;
+        margin: 7px auto 0;
+        width: 86px;
+        min-height: 18px;
+        max-height: 18px;
       }
 
       &.selected {
@@ -160,5 +210,11 @@ ion-content {
     &.exists {
       --background: #c3b177;
     }
+  }
+  div.button > ion-skeleton-text {
+    margin: 15px auto 0;
+    width: 220px;
+    height: 45px;
+    --border-radius: 40px;
   }
 }
