enhanced responsiveness for mobile

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,9 +3,9 @@
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <img
+          <ion-img
             src="https://ionicframework.com/docs/demos/api/slides/slide-1.png"
-          />
+          ></ion-img>
         </div>
         <div class="body">
           <h2>Welcome to <span class="brand">ZuPick</span></h2>
@@ -17,13 +17,12 @@
         </div>
       </div>
     </ion-slide>
-
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <img
+          <ion-img
             src="https://ionicframework.com/docs/demos/api/slides/slide-2.png"
-          />
+          ></ion-img>
         </div>
         <div class="body">
           <h2>Join Us</h2>
@@ -42,9 +41,9 @@
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <img
+          <ion-img
             src="https://ionicframework.com/docs/demos/api/slides/slide-4.png"
-          />
+          ></ion-img>
         </div>
         <div class="body">
           <h2>Have an account</h2>
