--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle menuId="m1">
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink="/home">
             <ion-icon name="home-outline" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
@@ -30,7 +30,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle menuId="m1">
-          <ion-item lines="none">
+          <ion-item lines="none" routerLink="/auth">
             <ion-icon name="exit-outline" slot="start"></ion-icon>
             <ion-label>Log Out</ion-label>
           </ion-item>
