--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -21,18 +21,27 @@ ion-slides {
       align-items: center;
 
       .face {
-        height: 320px;
+        max-height: 400px;
+        height: fit-content;
         margin: 50px 0 30px;
+
+        ion-img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
 
       .body {
-        height: 150px;
+        min-height: 150px;
+        height: fit-content;
 
         h2 {
           margin-top: 1.5rem;
         }
 
         p {
+          margin: 0;
           padding: 0 40px;
           font-size: 14px;
           line-height: 1.3;
@@ -41,6 +50,40 @@ ion-slides {
           b {
             font-weight: 500;
             color: var(--ion-text-color, #000000);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-height: 680px) {
+  ion-slides {
+    ion-slide {
+      .slide {
+        .face {
+          max-height: 360px;
+          margin: 30px 0 20px;
+
+          ion-img {
+            max-width: 360px;
+          }
+        }
+
+        .body {
+          h2 {
+            margin-top: 1rem;
+            font-size: 20px;
+          }
+
+          p {
+            padding: 0 25px;
+            font-size: 12px;
+            line-height: 1.2;
+          }
+
+          ion-button {
+            font-size: 12px;
           }
         }
       }
