--- a/src/app/core/cart/cart.page.html
+++ b/src/app/core/cart/cart.page.html
@@ -8,33 +8,37 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="cart.length <=0" class="blank-msg">
+  <ion-spinner *ngIf="isLoading" color="primary"></ion-spinner>
+
+  <div *ngIf="cart.length <=0 && !isLoading" class="blank-msg">
     Oops!! Your cart doesn't have any items yet.
   </div>
 
-  <div class="item" *ngFor="let cartItem of cart; let i = index;">
-    <div class="pic">
-      <ion-img src="{{cartItem.food.imgAddr}}"></ion-img>
-    </div>
+  <div *ngIf="!isLoading && cart.length > 0">
+    <div class="item" *ngFor="let cartItem of cart; let i = index;">
+      <div class="pic">
+        <ion-img src="{{cartItem.food.imgAddr}}"></ion-img>
+      </div>
 
-    <div class="info">
-      <div class="n">{{cartItem.food.name}}</div>
-      <div class="r">{{ cartItem.cafe.name }}</div>
-      <div class="o">
-        <div class="p">${{cartItem.food.price}}</div>
-        <div class="ctrls">
-          <div
-            class="b ion-activatable"
-            [ngClass]="{ remover: cartItem.quantity === 1}"
-            (click)="alterQuantity(i, '-')"
-          >
-            <ion-ripple-effect></ion-ripple-effect>
-            {{ cartItem.quantity > 1 ? '-' : 'x' }}
-          </div>
-          <div class="b">{{cartItem.quantity}}</div>
-          <div class="b ion-activatable" (click)="alterQuantity(i, '+')">
-            <ion-ripple-effect></ion-ripple-effect>
-            +
+      <div class="info">
+        <div class="n">{{cartItem.food.name}}</div>
+        <div class="r">{{ cartItem.cafe.name }}alwiskkdienshd</div>
+        <div class="o">
+          <div class="p">${{cartItem.food.price}}</div>
+          <div class="ctrls">
+            <div
+              class="b ion-activatable"
+              [ngClass]="{ remover: cartItem.quantity === 1}"
+              (click)="alterQuantity(i, '-')"
+            >
+              <ion-ripple-effect></ion-ripple-effect>
+              {{ cartItem.quantity > 1 ? '-' : 'x' }}
+            </div>
+            <div class="b">{{cartItem.quantity}}</div>
+            <div class="b ion-activatable" (click)="alterQuantity(i, '+')">
+              <ion-ripple-effect></ion-ripple-effect>
+              +
+            </div>
           </div>
         </div>
       </div>
