--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,9 +3,7 @@
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <ion-img
-            src="https://ionicframework.com/docs/demos/api/slides/slide-1.png"
-          ></ion-img>
+          <ion-img src="/assets/slide-1.png"></ion-img>
         </div>
         <div class="body">
           <h2>Welcome to <span class="brand">ZuPick</span></h2>
@@ -20,9 +18,7 @@
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <ion-img
-            src="https://ionicframework.com/docs/demos/api/slides/slide-2.png"
-          ></ion-img>
+          <ion-img src="/assets/slide-2.png"></ion-img>
         </div>
         <div class="body">
           <h2>Join Us</h2>
@@ -41,9 +37,7 @@
     <ion-slide>
       <div class="slide">
         <div class="face">
-          <ion-img
-            src="https://ionicframework.com/docs/demos/api/slides/slide-4.png"
-          ></ion-img>
+          <ion-img src="/assets/slide-3.png"></ion-img>
         </div>
         <div class="body">
           <h2>Have an account</h2>
