--- a/src/app/auth/login/check/check.page.scss
+++ b/src/app/auth/login/check/check.page.scss
@@ -1,14 +1,10 @@
-// ion-toolbar {
-//   --background: ;
-//   --color: ;
-// }
-
 .screen {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
+  min-height: 450px;
   padding-bottom: 160px;
 
   .num-input {
@@ -19,7 +15,7 @@
     border-radius: 6px;
     overflow: hidden;
     font-size: 22px;
-    height: 55px;
+    min-height: 55px;
     margin: 0 10px;
 
     width: max-content;
@@ -51,6 +47,8 @@
   }
 
   p {
+    max-width: 460px;
+    margin: 14px auto;
     padding: 0 40px;
     font-size: 14px;
     line-height: 1.3;
@@ -59,6 +57,36 @@
     b {
       font-weight: 500;
       color: var(--ion-text-color, #000000);
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .screen {
+    h2 {
+      font-size: 20px;
+    }
+
+    .num-input {
+      font-size: 18px;
+      min-height: 45px;
+
+      max-width: 140px;
+
+      ion-input {
+        letter-spacing: 1.4px;
+        width: calc(100% - 45px);
+      }
+
+      ion-button {
+        width: 45px;
+      }
+    }
+
+    p {
+      padding: 0 30px;
+      font-size: 13px;
+      line-height: 1.2;
     }
   }
 }
