--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,14 +1,10 @@
-// ion-toolbar {
-//   --background: ;
-//   --color: ;
-// }
-
 .screen {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
+  min-height: 400px;
   padding-bottom: 160px;
 
   .num-input {
@@ -20,6 +16,7 @@
     overflow: hidden;
     font-size: 22px;
     height: 55px;
+    min-height: 55px;
     margin: 0 10px;
 
     width: max-content;
@@ -77,6 +74,8 @@
   }
 
   p {
+    max-width: 460px;
+    margin: 14px auto;
     padding: 0 40px;
     font-size: 14px;
     line-height: 1.3;
@@ -85,6 +84,41 @@
     b {
       font-weight: 500;
       color: var(--ion-text-color, #000000);
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .screen {
+    h2 {
+      font-size: 20px;
+    }
+    .num-input {
+      border-radius: 6px;
+      font-size: 18px;
+      height: 45px;
+      min-height: 45px;
+      margin: 0 10px;
+
+      max-width: 245px;
+
+      .country-code {
+        width: 75px;
+      }
+
+      ion-input {
+        width: calc(100% - 75px - 47px);
+      }
+
+      ion-button {
+        width: 47px;
+      }
+    }
+
+    p {
+      padding: 0 30px;
+      font-size: 13px;
+      line-height: 1.2;
     }
   }
 }
