--- a/src/app/auth/signup/check/check.page.scss
+++ b/src/app/auth/signup/check/check.page.scss
@@ -1,8 +1,3 @@
-// ion-toolbar {
-//   --background: ;
-//   --color: ;
-// }
-
 .screen {
   display: flex;
   flex-direction: column;
@@ -59,6 +54,36 @@
     b {
       font-weight: 500;
       color: var(--ion-text-color, #000000);
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .screen {
+    h2 {
+      font-size: 20px;
+    }
+
+    .num-input {
+      font-size: 18px;
+      min-height: 45px;
+
+      max-width: 140px;
+
+      ion-input {
+        letter-spacing: 1.4px;
+        width: calc(100% - 45px);
+      }
+
+      ion-button {
+        width: 45px;
+      }
+    }
+
+    p {
+      padding: 0 30px;
+      font-size: 13px;
+      line-height: 1.2;
     }
   }
 }
