--- a/src/app/auth/signup/signup.page.scss
+++ b/src/app/auth/signup/signup.page.scss
@@ -1,8 +1,3 @@
-// ion-toolbar {
-//   --background: ;
-//   --color: ;
-// }
-
 .screen {
   display: flex;
   flex-direction: column;
@@ -85,6 +80,41 @@
     b {
       font-weight: 500;
       color: var(--ion-text-color, #000000);
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .screen {
+    h2 {
+      font-size: 20px;
+    }
+    .num-input {
+      border-radius: 6px;
+      font-size: 18px;
+      height: 45px;
+      min-height: 45px;
+      margin: 0 10px;
+
+      max-width: 245px;
+
+      .country-code {
+        width: 75px;
+      }
+
+      ion-input {
+        width: calc(100% - 75px - 47px);
+      }
+
+      ion-button {
+        width: 47px;
+      }
+    }
+
+    p {
+      padding: 0 30px;
+      font-size: 13px;
+      line-height: 1.2;
     }
   }
 }
