--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,12 +25,12 @@
         <ion-menu-toggle menuId="m1">
           <ion-item lines="none">
             <ion-icon name="reader-outline" slot="start"></ion-icon>
-            <ion-label>Abouts</ion-label>
+            <ion-label>About</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
         <ion-menu-toggle menuId="m1">
-          <ion-item lines="none" routerLink="/auth">
+          <ion-item lines="none" routerLink="/auth" routerDirection="root">
             <ion-icon name="exit-outline" slot="start"></ion-icon>
             <ion-label>Log Out</ion-label>
           </ion-item>
